test/parse/relaxed/bad/nospaceafterv2.sol
s SATISFIABLE
v 1
vnospace
